--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity_Register"></activity>
+        <activity android:name=".Activity_Register" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main" />
     </application>
 
 </manifest>
