--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:label="@string/title_activity_main" />
         <activity android:name=".vistas.Activity_Register" />
         <activity android:name=".vistas.NewIncident" />
-        <activity android:name=".vistas.DetailsIncident"></activity>
+        <activity android:name=".vistas.DetailsIncident" />
+        <activity android:name=".vistas.RecuperarClave"></activity>
     </application>
 
 </manifest>
