--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     //compile 'com.android.support:cardview-v7:26.1.+'
     //compile 'com.android.support:recyclerview-v7:26.1.+'
+    //compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
