--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
@@ -39,6 +38,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
 
     implementation 'com.github.bumptech.glide:glide:3.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 }
